--- a/apps/xdtool/app/css/index.less
+++ b/apps/xdtool/app/css/index.less
@@ -4,5 +4,9 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #fcfcfc;
+    background-color: #f5f5f5;
+}
+
+.main_page {
+    height: 100%;
 }
