--- a/apps/xdtool/app/css/index.less
+++ b/apps/xdtool/app/css/index.less
@@ -10,3 +10,14 @@ body {
 .main_page {
     height: 100%;
 }
+
+@font-face {
+    font-family: 'iconfont';
+    /* project id 1610973 */
+    src: url('//at.alicdn.com/t/font_1610973_2imcf9r6vy.eot');
+    src: url('//at.alicdn.com/t/font_1610973_2imcf9r6vy.eot?#iefix') format('embedded-opentype'),
+        url('//at.alicdn.com/t/font_1610973_2imcf9r6vy.woff2') format('woff2'),
+        url('//at.alicdn.com/t/font_1610973_2imcf9r6vy.woff') format('woff'),
+        url('//at.alicdn.com/t/font_1610973_2imcf9r6vy.ttf') format('truetype'),
+        url('//at.alicdn.com/t/font_1610973_2imcf9r6vy.svg#iconfont') format('svg');
+}
