--- a/apps/xdtool/app/js/comps/pj-block/pj-block.css
+++ b/apps/xdtool/app/js/comps/pj-block/pj-block.css
@@ -1,69 +1,62 @@
 .pj_block {
-    display: flex;
-    align-items: center;
-    padding: 8px;
-    /* height: 64px; */
-    background-color: #fff;
-    color: #1a051d;
-    font-size: 12px;
-    cursor: pointer;
-    user-select: none;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  /* height: 64px; */
+  background-color: #fff;
+  color: #1a051d;
+  font-size: 12px;
+  cursor: pointer;
+  user-select: none;
 }
-
-.pj_block[active="1"] {
-    background-color: #f4f4f4;
-    cursor: default;
-}
-
 .pj_block:hover {
-    background-color: #f4f4f4;
+  background-color: rgba(0, 0, 0, 0.02);
 }
-
+.pj_block[active="1"] {
+  background-color: rgba(45, 76, 252, 0.05);
+  color: #6979f8;
+  cursor: default;
+}
 .pj_avatar {
-    flex-shrink: 0;
-    margin-right: 12px;
-    width: 48px;
-    height: 48px;
-    border-radius: 5px;
-    background-color: #6979f8;
+  flex-shrink: 0;
+  margin-right: 12px;
+  width: 48px;
+  height: 48px;
+  border-radius: 5px;
+  background-color: #6979f8;
 }
-
 .pj_right {
-    position: relative;
-    flex: 1;
+  position: relative;
+  flex: 1;
 }
-
 .pj_title {
-    position: relative;
-    width: 100%;
-    height: 24px;
-    line-height: 24px;
+  position: relative;
+  width: 100%;
+  height: 24px;
+  line-height: 24px;
 }
-
 .pj_title span {
-    position: absolute;
-    display: block;
-    width: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  position: absolute;
+  display: block;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-
 .pj_tips {
-    display: flex;
-    align-items: center;
-    height: 14px;
-    font-size: 10px;
-    color: #d0c9d6;
+  display: flex;
+  align-items: center;
+  height: 14px;
+  font-size: 10px;
+  color: #bab0c2;
 }
-
 .pj_tips::before {
-    display: block;
-    margin-right: 5px;
-    width: 10px;
-    height: 10px;
-    content: "";
-    background-image: url(time.svg);
-    background-size: cover;
-    background-position: center;
+  display: block;
+  margin-right: 5px;
+  width: 10px;
+  height: 10px;
+  content: "";
+  background-image: url(time.svg);
+  background-size: cover;
+  background-position: center;
 }
