--- a/apps/xdtool/app/js/pannels/pannel-file/pannel-file.css
+++ b/apps/xdtool/app/js/pannels/pannel-file/pannel-file.css
@@ -6,5 +6,13 @@
 }
 
 .container {
-    
+    padding: 10px;
+}
+
+.title {
+    height: 36px;
+    line-height: 36px;
+    font-size: 13px;
+    border-bottom: #e9e9e9 solid 1px;
+    user-select: none;
 }
