--- a/apps/xdtool/app/css/index.less
+++ b/apps/xdtool/app/css/index.less
@@ -19,11 +19,12 @@ body {
 }
 
 @font-face {
-    font-family: 'iconfont';  /* project id 1610973 */
-    src: url('//at.alicdn.com/t/font_1610973_54ktahmktr.eot');
-    src: url('//at.alicdn.com/t/font_1610973_54ktahmktr.eot?#iefix') format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_1610973_54ktahmktr.woff2') format('woff2'),
-    url('//at.alicdn.com/t/font_1610973_54ktahmktr.woff') format('woff'),
-    url('//at.alicdn.com/t/font_1610973_54ktahmktr.ttf') format('truetype'),
-    url('//at.alicdn.com/t/font_1610973_54ktahmktr.svg#iconfont') format('svg');
-  }
+    font-family: 'iconfont';
+    /* project id 1610973 */
+    src: url('//at.alicdn.com/t/font_1610973_mc0nyoy0zv.eot');
+    src: url('//at.alicdn.com/t/font_1610973_mc0nyoy0zv.eot?#iefix') format('embedded-opentype'),
+        url('//at.alicdn.com/t/font_1610973_mc0nyoy0zv.woff2') format('woff2'),
+        url('//at.alicdn.com/t/font_1610973_mc0nyoy0zv.woff') format('woff'),
+        url('//at.alicdn.com/t/font_1610973_mc0nyoy0zv.ttf') format('truetype'),
+        url('//at.alicdn.com/t/font_1610973_mc0nyoy0zv.svg#iconfont') format('svg');
+}
