--- a/apps/xdtool/app/js/pages/main/main.css
+++ b/apps/xdtool/app/js/pages/main/main.css
@@ -5,11 +5,22 @@
 }
 
 .xt_left {
+    position: relative;
     width: 260px;
     height: 100%;
     margin-left: 3px;
-    overflow-y: auto;
     background-color: #fff;
+}
+
+.xf_left_line {
+    position: absolute;
+    right: -5px;
+    top: 0;
+    width: 10px;
+    height: 100%;
+    /* background-color: rgba(255, 0, 0, .1); */
+    z-index: 2;
+    cursor: col-resize;
 }
 
 .xt_right {
