--- a/apps/xdtool/app/js/pannels/pannel-p-overview/pannel-p-overview.css
+++ b/apps/xdtool/app/js/pannels/pannel-p-overview/pannel-p-overview.css
@@ -1,10 +1,16 @@
 :host {
     display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .overview_con {
+    box-sizing: border-box;
     padding-top: 20px;
     padding-left: 20px;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
 }
 
 .title {
@@ -67,4 +73,26 @@
     background-position: right center;
     background-size: 13px auto;
     background-repeat: no-repeat;
+}
+
+/* 设置滚动条的样式 */
+::-webkit-scrollbar {
+    width: 4px;
+}
+
+/* 滚动槽 */
+::-webkit-scrollbar-track {
+    box-shadow: inset 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.1);
+    box-shadow: inset 6px rgba(0, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(255, 0, 0, 0.4);
 }
