--- a/apps/xdtool/app/js/command/rightmenu/right-menu.css
+++ b/apps/xdtool/app/js/command/rightmenu/right-menu.css
@@ -6,7 +6,23 @@
     border-radius: 4px;
     background-color: #c9c7c5;
     background-image: linear-gradient(-45deg, #f1f1f1, #f5f5f5);
+    z-index: 1000;
+}
+
+.menu_con:after {
+    box-sizing: border-box;
+    position: absolute;
+    display: block;
+    content: "";
+    width: 200%;
+    height: 200%;
+    left: 0;
+    top: 0;
+    border-radius: 8px;
     border: rgba(0, 0, 0, .08) solid 1px;
+    transform-origin: 0 0;
+    transform: scale(.5);
+    z-index: 0;
 }
 
 @keyframes menu_con_anime {
@@ -29,6 +45,7 @@
     font-size: 12px;
     color: #000;
     cursor: default;
+    z-index: 1;
     animation: menu_con_anime ease .1s;
 }
 
