--- a/apps/xdtool/app/js/pannels/pannel-file/pannel-file.css
+++ b/apps/xdtool/app/js/pannels/pannel-file/pannel-file.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     box-sizing: border-box;
     height: 100%;
-    padding: 10px 0 0 10px;
+    padding: 0 0 0 10px;
 }
 
 .title {
