--- a/apps/xdtool/app/css/index.less
+++ b/apps/xdtool/app/css/index.less
@@ -19,11 +19,12 @@ body {
 }
 
 @font-face {
-    font-family: 'iconfont';  /* project id 1610973 */
-    src: url('//at.alicdn.com/t/font_1610973_nhsxmgc04n.eot');
-    src: url('//at.alicdn.com/t/font_1610973_nhsxmgc04n.eot?#iefix') format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_1610973_nhsxmgc04n.woff2') format('woff2'),
-    url('//at.alicdn.com/t/font_1610973_nhsxmgc04n.woff') format('woff'),
-    url('//at.alicdn.com/t/font_1610973_nhsxmgc04n.ttf') format('truetype'),
-    url('//at.alicdn.com/t/font_1610973_nhsxmgc04n.svg#iconfont') format('svg');
-  }
+    font-family: 'iconfont';
+    /* project id 1610973 */
+    src: url('//at.alicdn.com/t/font_1610973_1u386us2dmj.eot');
+    src: url('//at.alicdn.com/t/font_1610973_1u386us2dmj.eot?#iefix') format('embedded-opentype'),
+        url('//at.alicdn.com/t/font_1610973_1u386us2dmj.woff2') format('woff2'),
+        url('//at.alicdn.com/t/font_1610973_1u386us2dmj.woff') format('woff'),
+        url('//at.alicdn.com/t/font_1610973_1u386us2dmj.ttf') format('truetype'),
+        url('//at.alicdn.com/t/font_1610973_1u386us2dmj.svg#iconfont') format('svg');
+}
