--- a/apps/xdtool/app/js/pages/main/main.css
+++ b/apps/xdtool/app/js/pages/main/main.css
@@ -63,3 +63,9 @@ h3 {
     font-family: iconfont;
     font-size: 17px;
 }
+
+.remoter_container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
