--- a/apps/xdtool/app/js/pannels/pannel-console/pannel-console.css
+++ b/apps/xdtool/app/js/pannels/pannel-console/pannel-console.css
@@ -3,14 +3,16 @@
 }
 
 .main {
+    display: flex;
+    flex-direction: column;
     box-sizing: border-box;
+    margin: 10px;
     height: 100%;
     background-color: #fff;
-    padding: 0 10px;
-    margin: 10px;
 }
 
 .title {
+    margin: 0 10px;
     height: 36px;
     line-height: 36px;
     border-bottom: #e9e9e9 solid 1px;
@@ -18,11 +20,15 @@
 }
 
 .top_tool {
+    padding: 0 10px;
     height: 26px;
     line-height: 26px;
     background-color: #f2f2f2;
 }
 
 .list {
-    padding-bottom: 10px;
+    flex: 1;
+    padding: 0 10px 10px;
+    max-height: 500px;
+    overflow-y: auto;
 }
