--- a/apps/xdtool/app/js/pannels/pannel-remote/pannel-remote.less
+++ b/apps/xdtool/app/js/pannels/pannel-remote/pannel-remote.less
@@ -8,6 +8,13 @@
     font-size: 12px;
 }
 
+.con {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
 .title {
     height: 36px;
     line-height: 36px;
@@ -15,20 +22,32 @@
 }
 
 .list {
+    position: relative;
+    flex: 1;
     margin-top: 5px;
     min-height: 60px;
+    overflow-y: auto;
 
-    &:empty {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    .inner_list {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
 
-        &:after {
-            display: block;
-            color: #aaa;
-            content: "暂无打开的网页";
+        &:empty {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            &:after {
+                display: block;
+                color: #aaa;
+                content: "暂无打开的网页";
+            }
         }
     }
+
 
     remote-block {
         border-bottom: #fafafa solid 1px;
