--- a/apps/xdtool/app/js/pannels/pannel-remote/pannel-remote.css
+++ b/apps/xdtool/app/js/pannels/pannel-remote/pannel-remote.css
@@ -18,6 +18,9 @@
   line-height: 36px;
   border-bottom: #e9e9e9 solid 1px;
 }
+.pannel {
+  height: 100%;
+}
 .list {
   position: relative;
   flex: 1;
@@ -41,6 +44,9 @@
   display: block;
   color: #aaa;
   content: "暂无打开的网页";
+}
+.list[autoheight="true"] .inner_list {
+  position: static;
 }
 .list remote-block {
   border-bottom: #fafafa solid 1px;
