--- a/apps/xdtool/app/js/pannels/pannel-remote/pannel-remote.less
+++ b/apps/xdtool/app/js/pannels/pannel-remote/pannel-remote.less
@@ -21,6 +21,10 @@
     border-bottom: #e9e9e9 solid 1px;
 }
 
+.pannel {
+    height: 100%;
+}
+
 .list {
     position: relative;
     flex: 1;
@@ -48,6 +52,11 @@
         }
     }
 
+    &[autoheight="true"] {
+        .inner_list {
+            position: static;
+        }
+    }
 
     remote-block {
         border-bottom: #fafafa solid 1px;
