--- a/apps/xdtool_app/css/global.css
+++ b/apps/xdtool_app/css/global.css
@@ -24,12 +24,11 @@
     display: none;
 }
 
-.pannel {
+/* .pannel {
     display: flex;
     flex-direction: column;
     background-color: #fff;
     padding: 0 10px;
-    /* margin: 10px; */
 }
 
 .pannel_title {
@@ -37,14 +36,14 @@
     line-height: 36px;
     border-bottom: #e9e9e9 solid 1px;
     font-size: 12px;
-}
+} */
 
 .iconfont {
     font-family: iconfont;
     font-size: 17px;
 }
 
-.p_overview {
+/* .p_overview {
     box-sizing: border-box;
     z-index: 10;
     left: 2px;
@@ -52,4 +51,4 @@
     width: calc(100% - 2px);
     height: 100%;
     background-color: #fff;
-}
+} */
