--- a/apps/xdtool_app/pages/main/main.css
+++ b/apps/xdtool_app/pages/main/main.css
@@ -5,9 +5,21 @@
 }
 
 .left {
+    position: relative;
     display: flex;
     flex-direction: column;
     background-color: #fff;
+}
+
+.left_sizer {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 10px;
+    z-index: 2;
+    /* background-color: red; */
+    cursor: col-resize;
 }
 
 .left .dir {
