--- a/apps/xdtool_app/command/rightmenu/right-menu.css
+++ b/apps/xdtool_app/command/rightmenu/right-menu.css
@@ -25,7 +25,7 @@
     z-index: 0;
 }
 
-.menu_block_name{
+.menu_block_name {
     white-space: nowrap;
 }
 
@@ -64,13 +64,19 @@
     border-bottom: transparent solid 5px;
 }
 
-.menu_block:hover {
+.menu_block:not(.disabled):hover {
     color: #fff;
     background-color: #2c6de4;
 }
 
 .menu_block.san_jiao:hover:after {
     border-left: #fff solid 5px;
+}
+
+
+.menu_block.disabled {
+    color: rgb(155, 155, 155);
+    cursor: not-allowed;
 }
 
 .group {
