add input file-block

--- a/apps/xdtool_app/css/global.css
+++ b/apps/xdtool_app/css/global.css
@@ -20,6 +20,12 @@
     background: rgba(255, 0, 0, 0.4);
 }
 
+
+::placeholder {
+    font-family: "FZLanTingHei-R-GBK", STHeiti STXihei, Microsoft Yahei, Arial;
+    font-size: 12px;
+}
+
 [xv-ele=""] {
     display: none;
 }
