--- a/apps/xdtool_app/css/index.css
+++ b/apps/xdtool_app/css/index.css
@@ -19,6 +19,13 @@ body {
 .main_page {
   height: 100%;
 }
+input {
+  font-family: "FZLanTingHei-R-GBK", STHeiti STXihei, Microsoft Yahei, Arial;
+}
+::placeholder {
+  font-size: 12px;
+  font-family: "FZLanTingHei-R-GBK", STHeiti STXihei, Microsoft Yahei, Arial;
+}
 @font-face {
   font-family: 'iconfont';
   /* project id 1610973 */
