--- a/apps/xdtool_app/css/index.less
+++ b/apps/xdtool_app/css/index.less
@@ -21,6 +21,16 @@ body {
     height: 100%;
 }
 
+
+input {
+    font-family: "FZLanTingHei-R-GBK", STHeiti STXihei, Microsoft Yahei, Arial;
+}
+
+::placeholder {
+    font-size: 12px;
+    font-family: "FZLanTingHei-R-GBK", STHeiti STXihei, Microsoft Yahei, Arial;
+}
+
 @font-face {
     font-family: 'iconfont';
     /* project id 1610973 */
